--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,10 @@
    /*outline: 1px solid #f00 !important;*/ /*HABILITAR ESTE COMANDO PARA VER DONDE ESTÁ DESBORDANDO EL CODIGO*/
 }
 
+.strongText {
+   font-weight: bold;
+}
+
 /* ======================================================================================================================= 
 ====================================================== MOBILE ============================================================ 
 ======================================================================================================================= */
@@ -82,7 +86,7 @@ body {
    display: flex;
    justify-content: space-between;
    align-items: center;
-   height: 80px;
+   /*height: 80px;*/
    z-index: 1;
    width: 100%;
    padding: 0;
@@ -92,7 +96,7 @@ body {
 .navbar__logo {
    width: 246px;
    height: 51px;
-   margin-left: 10%;
+   margin-left: 5%;
 }
 
 .navbar__menu {
@@ -124,12 +128,20 @@ body {
    padding-left: 25px;
 }
 
+.navbar__toggle {
+   align-self: center;
+}
+
 .navbar__toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
-   background: #fff;
+   background: var(--textColor1)
+}
+
+.navbar__toggle .bar:nth-child(1) {
+   margin-top: 0;
 }
 
 .navbar__links {
@@ -152,6 +164,23 @@ body {
 
 .navbar__btn {
    padding-bottom: 2rem;
+}
+
+.carousel {
+   height: 100vh;
+}
+
+#carouselExampleControlsNoTouching {
+   height: 100% !important;
+}
+
+.carousel-inner, .carousel-item, .carousel-item> img {
+   height: 100%;
+}
+
+
+.carousel-item> img {
+   object-fit: cover;
 }
 
 .button {
@@ -208,9 +237,13 @@ body {
 /* Slide */
 .container__text {
    z-index: 1;
+   height: 100%;
+   display: flex;
+   justify-content: flex-end;
+   align-items: flex-end;
    position: relative;
-   top: 40px;
-   left: 815px;
+   bottom: 17%;
+   
 }
 .text-container {
    font-size: 45px;
@@ -218,23 +251,25 @@ body {
    font-family: "red Hat Display";
    text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.11);
    z-index: 1;
+   position: relative;
 }
 
 .text-container::after {
    content: "";
    position: absolute;
    background-color: var(--detailColor2);
-   width: 100%;
+   width: 150%;
    height: 17px;
-   left: -2rem;
-   top: 2rem;
+
+   top: -5rem;
    z-index: -1;
 }
 
 .container__btn {
+   display: none;
    z-index: 1;
    position: relative;
-   top: 525px;
+   /*top: 525px;*/
 }
 .btn__products {
    font-size: 22px;
@@ -244,7 +279,7 @@ body {
 /* Details */
 .container__detail__spa {
    display: flex;
-   justify-content: center;
+   /*justify-content: center;*/
    align-items: center;
 }
 .home-details-allcontainer {
@@ -254,7 +289,7 @@ body {
    align-items: center;
 }
 .home-details-container {
-   width: 70%;
+   width: 100%;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
@@ -315,7 +350,7 @@ body {
 
 .empty::after {
    background-color: var(--detailColor2);
-   width: 100%;
+   width: 250px;
    height: 1.6rem;
    top: -13rem;
    left: -1.8rem;
@@ -362,11 +397,12 @@ body {
 
 .home-details__img-col-2_img2 {
    display: none;
+   width: 100%;
 }
 
 .home-details__img-col-2 > img {
    width: 100%;
-   padding: 20px;
+   /*padding: 20px;*/
 }
 /* Products */
 
@@ -420,6 +456,107 @@ body {
 
 .card:hover {
    cursor: pointer;
+}
+
+/* Detail View */
+
+
+.detailView-container {
+   height: 100%;
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   color: var(--textColor2);
+   gap: 2rem;
+   margin-top: 4rem;
+}
+.detailView-container__images {
+   height: 100%;
+   width: 100%;
+   padding: 0 1rem;
+   display: flex;
+   flex-direction: column;
+}
+.otras-img {
+   width: 100%;
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   justify-content: space-between;
+   gap: .5rem;
+}
+.images__main-img {
+   width: 100%;
+   margin-bottom: 30px;
+}
+
+.images__main-img > img {
+   width: 100%;
+}
+
+.otra-img {
+   width: 100%;
+   
+}
+
+.detailView-container__details {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: flex-start;
+   height: 100%;
+   padding: 0 1rem;
+}
+.detailView-text {
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: flex-start;
+   height: 50%;
+}
+
+.detailView-text__title {
+   text-transform: uppercase;
+   position: relative;
+   z-index: 1;
+}
+.detailView-text__title::after {
+   content: "";
+   position: absolute;
+   width: 100%;
+   height: 20px;
+   background-color: var(--detailColor2);
+   opacity: 50%;
+   left: -.3rem;
+   top: 1rem;
+   z-index: -1;
+}
+
+.detailView-text__pretitle {
+   margin: 0;
+}
+
+.detailView-btnContainer {
+   width: 200px;
+   height: 58px;
+   background-color: var(--mainColor1);
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   text-decoration: none;
+   border-radius: 50px;
+   align-self: center;
+   margin-top: 5rem;
+}
+
+.detailView-btn {
+   text-decoration: none;
+   color: var(--linkColor1);
+   font-size: 16px;
+   font-weight: 600;
+   margin: 0;
 }
 
 /* Payment & Shipment */
@@ -633,13 +770,11 @@ footer {
 .footer-social {
    width: 2.2rem;
 }
-@media (max-width:776px){
+@media (max-width:1023px) {
    /* Slide */
    .container__text {
       z-index: 1;
-      position: relative;
-      top: 14px;
-      left: 194px;
+      
    }
    .text-container {
       font-size: 25px;
@@ -647,24 +782,18 @@ footer {
       font-family: "red Hat Display";
       text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.11);
       z-index: 1;
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.67);
    }
 
    .text-container::after {
-      content: "";
-      position: absolute;
-      background-color: var(--detailColor2);
-      width: 100%;
-      height: 12px;
-      left: -1rem;
-      top: 1rem;
-      z-index: -1;
+      
+      width: 110%;
+      height: 25px;
+      right: 0px;
+      top: .8rem;
    }
 
-   .container__btn {
-      z-index: 1;
-      position: relative;
-      top: 85px;
-   }
+   
    .btn__products {
       font-size: 12px;
       color: #6e2828;
@@ -675,7 +804,9 @@ footer {
 ===================================================== DESKTOP ============================================================ 
 ======================================================================================================================= */
 
-@media screen and (min-width: 1517px) {
+
+
+@media screen and (min-width: 1024px) {
    /* Body */
    body {
       background: rgb(255, 150, 65);
@@ -697,7 +828,8 @@ footer {
    .navbar__container {
       display: flex;
       justify-content: space-between;
-      height: 75px;
+      align-items: center;
+      height: 100%;
       z-index: 1;
       width: 100%;
       margin: 0 auto;
@@ -722,16 +854,18 @@ footer {
    }
 
    .navbar__logo {
-      position: absolute;
       width: 246px;
       height: 51px;
+      /*position: absolute;
       left: 250px;
-      top: 13px;
+      top: 13px;*/
    }
 
    .navbar__item {
-      max-height: max-content;
+      height: 100%;
       box-sizing: border-box;
+      display: flex;
+      align-items: center;
    }
 
    .navbar__links {
@@ -768,6 +902,10 @@ footer {
    }
 
    /* Slide */
+   .carousel {
+      width: 100%;
+   } 
+
    .slide-img {
       width: 100%;
       height: 754px;
@@ -775,40 +913,44 @@ footer {
 
    .container__text {
       z-index: 1;
-      position: relative;
-      top: 40px;
-      left: 980px;
+      display: flex;
+      align-items: flex-start;
+      top:10%;
+      padding-right: 10%;
    }
    .text-container {
       font-size: 59px;
       font-weight: bold;
       font-family: "red Hat Display";
-      text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.11);
+      text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.67);
+      justify-self: flex-end;
       z-index: 1;
    }
 
    .text-container::after {
-      position: absolute;
-      text-align: right;
-      content: "";
-      position: absolute;
-      background-color: var(--detailColor2);
-      width: 1010px;
-      height: 37px;
-      left: -4rem;
-      top: 2.5rem;
-      z-index: -1;
+      width: 150%;
+      height: 45px;
+      left: -5%;
+      top: 2rem;
+
    }
 
    .container__btn {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       z-index: 1;
       position: relative;
-      top: 525px;
+      top: -20%;
+      
    }
    .btn__products {
+      display: flex;
       font-size: 22px;
       color: #6e2828;
       font-weight: 700;
+      margin: 0!important;
+      
    }
    /* Whatsapp */
    .img_wsp {
@@ -834,6 +976,7 @@ footer {
       padding-top: 2rem;
    }
    .home-details-container {
+      
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -841,6 +984,7 @@ footer {
       border-left: 12px solid var(--detailColor1);
       padding-left: 26px;
       padding-top: 2rem;
+      margin: 2rem 4rem;
    }
 
    .home-details-text {
@@ -1012,6 +1156,7 @@ footer {
       height: 100%;
       width: 80%;
       display: flex;
+      flex-direction: row;
       align-items: center;
       justify-content: center;
       color: var(--textColor2);
@@ -1305,4 +1450,166 @@ footer {
    .footer-social {
       width: 2.2rem;
    }
+}
+
+
+@media screen and (min-width: 600px) and (max-width: 1023px) {
+   /* Slide */
+   .container__text {
+      
+      
+      
+   }
+   .text-container {
+      position: relative;
+   }
+   .text-container::after {
+      
+      width: 110%;
+      height: 24px;
+
+   }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1517px) {
+
+   /* Details */
+
+   .home-details-allcontainer {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 3rem;
+      padding-top: 2rem;
+   }
+   .home-details-container {
+      
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      /*align-items: flex-start;*/
+      border-left: 12px solid var(--detailColor1);
+      padding-left: 26px;
+      padding-top: 2rem;
+      margin: 6rem 4rem;
+   }
+
+   .home-details-text {
+      height: inherit;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin-left: 0;
+      margin-top: 0;
+      padding-left: 0;
+      padding-right: 0;
+      padding-top: 13rem;
+      padding-bottom: 5rem;
+      border-left: none;
+      margin-bottom: 0;
+   }
+
+   .home-details-text__pretitle {
+      font-size: 24px;
+      font-weight: 400;
+      position: relative;
+      font-size: 34px;
+   }
+
+   .empty {
+      position: relative;
+   }
+
+   .home-details-text__pretitle::after,
+   .home-details-text__paragraph::after,
+   .empty::after {
+      content: "";
+      position: absolute;
+   }
+
+   .home-details-text__pretitle::after {
+      background-color: var(--detailColor3);
+      width: 360px;
+      height: 1.6rem;
+      top: -13rem;
+      left: -4rem;
+   }
+
+   .home-details-text__paragraph::after {
+      background-color: var(--detailColor4);
+      width: 230px;
+      height: 0.8rem;
+      top: -20rem;
+      left: -3.3rem;
+      z-index: -1;
+   }
+
+   .empty::after {
+      background-color: var(--detailColor2);
+      width: 290px;
+      height: 1.6rem;
+      top: -18.5rem;
+      left: -3rem;
+   }
+
+   .home-details-text__title {
+      font-size: 66px;
+      font-weight: 600;
+      position: relative;
+      z-index: 0;
+      text-align: left;
+      max-width: fit-content;
+   }
+
+   .home-details-text__title::after {
+      content: "";
+      background-color: var(--detailColor2);
+      position: absolute;
+      width: 19.8rem;
+      height: 2.5rem;
+      top: 2.5rem;
+      left: 0;
+      z-index: -1;
+   }
+
+   .home-details-text__paragraph {
+      width: 70%;
+      margin-top: 1rem;
+      padding-right: 20px;
+      position: relative;
+      font-size: 24px;
+   }
+
+   .single-detail-img {
+      height: 519px;
+      padding-right: 33px;
+      position: relative;
+   }
+
+   .home-details__img-col-2 {
+      width: 100%;
+   }
+   .home-details__img-col-1 {
+      width: 100%;
+      height: 50%;
+      display: block;
+   }
+
+   .home-details__img-col-2_img2 {
+      margin-top: 52px;
+      display: block;
+   }
+
+   .home-details__img-col-1 > img,
+   .home-details__img-col-2 > img {
+      width: 100%;
+   }
+
+   .home-details__img-col-1 > img {
+      height: 60%;
+   }
+
+
+
 }
