--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
    box-sizing: border-box;
    margin: 0;
    padding: 0;
-   /*overflow: hidden;*/
+   /*overflow-x: hidden;*/
    /*outline: 1px solid #f00 !important;*/ /*HABILITAR ESTE COMANDO PARA VER DONDE ESTÁ DESBORDANDO EL CODIGO*/
 }
 
@@ -64,6 +64,20 @@
    background-color: var(--linkColor1);
    color: #fff;
 }
+
+
+.filterBtn {
+   font-size: 22px;
+   font-weight: 500;
+   color: var(--mainColor1)!important;
+   margin: 10px 40px !important;
+   border: none;
+}
+.filterBtn:hover, .filterBtn:focus {
+   border-bottom: 3px solid var(--mainColor1);
+   margin-bottom: 7px !important;
+}
+
 body {
    background: rgb(255, 150, 65);
    background: var(--backgroundColor);
@@ -274,7 +288,7 @@ body {
 }
 .btn__products {
    font-size: 22px;
-   color: #6e2828;
+   color: var(--mainColor1);
    font-weight: 700;
 }
 /* Details */
@@ -424,12 +438,21 @@ body {
    align-items: flex-start;
    flex-direction: column;
 }
+
+
+
 .upper-title {
    font-size: 1rem;
    line-height: 36.5px;
    font-weight: 500;
    color: var(--textColor2);
 }
+
+.card-name {
+   font-size: 19px;
+   font-weight: 800;
+}
+
 .home-contact__title__products {
    margin-top: 0.2rem;
    position: relative;
@@ -488,6 +511,11 @@ body {
    justify-content: space-between;
    gap: .5rem;
 }
+
+.otras-img a {
+   height: 100%;
+}
+
 .images__main-img {
    width: 100%;
    margin-bottom: 30px;
@@ -499,7 +527,7 @@ body {
 
 .otra-img {
    width: 100%;
-   
+   height: 100%;
 }
 
 .detailView-container__details {
@@ -679,6 +707,8 @@ footer {
    gap: 2rem;
 }
 
+
+
 .footer-rest {
    display: flex;
    flex-direction: column;
@@ -797,7 +827,7 @@ footer {
    
    .btn__products {
       font-size: 12px;
-      color: #6e2828;
+      color: var(--mainColor1);
       font-weight: 700;
    }
 }
@@ -942,17 +972,25 @@ footer {
       align-items: center;
       z-index: 1;
       position: relative;
-      top: -20%;
+      top: -30%;
       
    }
    .btn__products {
       display: flex;
       font-size: 22px;
-      color: #6e2828;
+      color: var(--mainColor1)!important;
+      background-color: var(--backgroundColor)!important;
       font-weight: 700;
       margin: 0!important;
-      
    }
+   .btn__products:hover, .btn__products:focus {
+      color: var(--textColor3)!important;
+      background-color: var(--detailColor2)!important;
+      ;
+   }
+
+
+
    /* Whatsapp */
    .img_wsp {
       width: 100px;
@@ -964,6 +1002,7 @@ footer {
       line-height: 55px;
       right: 40px;
       bottom: 30px;
+      z-index: 9;
    }
 
    /* Details */
@@ -1145,6 +1184,17 @@ footer {
       background-color: var(--detailColor1);
       height: auto;
       border-radius: 0px 0px 15px 15px;
+      width: 25%;
+      max-width: 25%;
+      
+   }
+
+   .card img {
+      height: 100%;
+   }
+
+   .text-center {
+      height: 130px;
    }
 
    /* Detail View */
@@ -1152,6 +1202,7 @@ footer {
       display: flex;
       align-items: center;
       justify-content: center;
+      gap: 2rem;
    }
    .detailView-container {
       height: 100%;
@@ -1357,6 +1408,10 @@ footer {
       padding: 2rem 0;
       padding-top: 3rem;
       gap: 2rem;
+   }
+
+   .footer-logo {
+      margin-left: 6rem;
    }
 
    .footer-rest {
