--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,7 @@ body {
 }
 .otras-img {
    width: 100%;
+   height: 80px;
    display: flex;
    flex-direction: row;
    align-items: center;
@@ -514,6 +515,7 @@ body {
 
 .otras-img a {
    height: 100%;
+   width: 25%;
 }
 
 .images__main-img {
@@ -1113,6 +1115,10 @@ footer {
       font-size: 24px;
    }
 
+   .paragraph1 {
+      margin-top: 2rem;
+   }
+
    .single-detail-img {
       height: 519px;
       padding-right: 33px;
@@ -1227,7 +1233,14 @@ footer {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
+      height: 140px;
    }
+
+   .otras-img a {
+      height: 100%;
+      width: auto;
+   }
+
    .images__main-img {
       width: 100%;
       margin-bottom: 30px;
@@ -1631,6 +1644,10 @@ footer {
       padding-right: 20px;
       position: relative;
       font-size: 24px;
+   }
+
+   .paragraph1 {
+      margin-top: 2rem;
    }
 
    .single-detail-img {
