--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,6 @@ body {
 }
 .otras-img {
    width: 100%;
-   height: 80px;
    display: flex;
    flex-direction: row;
    align-items: center;
@@ -515,7 +514,6 @@ body {
 
 .otras-img a {
    height: 100%;
-   width: 25%;
 }
 
 .images__main-img {
@@ -1192,7 +1190,12 @@ footer {
       border-radius: 0px 0px 15px 15px;
       width: 25%;
       max-width: 25%;
-      
+      transition: all .5s ease;
+   }
+
+   .card:hover {
+      -webkit-box-shadow: 0px 5px 8px 2px rgba(0,0,0,0.38); 
+      box-shadow: 0px 5px 8px 2px rgba(0,0,0,0.38);
    }
 
    .card img {
@@ -1233,12 +1236,10 @@ footer {
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      height: 140px;
    }
 
    .otras-img a {
       height: 100%;
-      width: auto;
    }
 
    .images__main-img {
