--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@
 
 /* Global */
 * {
-   text-decoration: none!important;
+   text-decoration: none !important;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
@@ -65,15 +65,15 @@
    color: #fff;
 }
 
-
 .filterBtn {
    font-size: 22px;
    font-weight: 500;
-   color: var(--mainColor1)!important;
+   color: var(--mainColor1) !important;
    margin: 10px 40px !important;
    border: none;
 }
-.filterBtn:hover, .filterBtn:focus {
+.filterBtn:hover,
+.filterBtn:focus {
    border-bottom: 3px solid var(--mainColor1);
    margin-bottom: 7px !important;
 }
@@ -152,7 +152,7 @@ body {
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
-   background: var(--textColor1)
+   background: var(--textColor1);
 }
 
 .navbar__toggle .bar:nth-child(1) {
@@ -189,12 +189,13 @@ body {
    height: 100% !important;
 }
 
-.carousel-inner, .carousel-item, .carousel-item> img {
+.carousel-inner,
+.carousel-item,
+.carousel-item > img {
    height: 100%;
 }
 
-
-.carousel-item> img {
+.carousel-item > img {
    object-fit: cover;
 }
 
@@ -258,7 +259,6 @@ body {
    align-items: flex-end;
    position: relative;
    bottom: 17%;
-   
 }
 .text-container {
    font-size: 45px;
@@ -439,8 +439,6 @@ body {
    flex-direction: column;
 }
 
-
-
 .upper-title {
    font-size: 1rem;
    line-height: 36.5px;
@@ -484,7 +482,6 @@ body {
 
 /* Detail View */
 
-
 .detailView-container {
    height: 100%;
    width: 100%;
@@ -509,7 +506,7 @@ body {
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
-   gap: .5rem;
+   gap: 0.5rem;
 }
 
 .otras-img a {
@@ -558,7 +555,7 @@ body {
    height: 20px;
    background-color: var(--detailColor2);
    opacity: 50%;
-   left: -.3rem;
+   left: -0.3rem;
    top: 1rem;
    z-index: -1;
 }
@@ -707,8 +704,6 @@ footer {
    gap: 2rem;
 }
 
-
-
 .footer-rest {
    display: flex;
    flex-direction: column;
@@ -801,11 +796,10 @@ footer {
 .footer-social {
    width: 2.2rem;
 }
-@media (max-width:1023px) {
+@media (max-width: 1023px) {
    /* Slide */
    .container__text {
       z-index: 1;
-      
    }
    .text-container {
       font-size: 25px;
@@ -817,14 +811,12 @@ footer {
    }
 
    .text-container::after {
-      
       width: 110%;
       height: 25px;
       right: 0px;
-      top: .8rem;
+      top: 0.8rem;
    }
 
-   
    .btn__products {
       font-size: 12px;
       color: var(--mainColor1);
@@ -834,8 +826,6 @@ footer {
 /* ======================================================================================================================= 
 ===================================================== DESKTOP ============================================================ 
 ======================================================================================================================= */
-
-
 
 @media screen and (min-width: 1024px) {
    /* Body */
@@ -935,18 +925,39 @@ footer {
    /* Slide */
    .carousel {
       width: 100%;
-   } 
+   }
 
-   .slide-img {
+   .carousel-item{
+      outline-offset: -8px;
+      overflow: hidden;
+      position: relative;
+   }
+   .slide-img, carousel-inner {
+      position: absolute;
       width: 100%;
       height: 754px;
+      inset: 0;
+      object-fit: cover;
+      opacity: 0.9;
+      transition: transform 0.75s ease-in-out;
+      -webkit-transition: transform 0.75s;
+      -moz-transition: transform 0.75s;
+      -ms-transition: transform 0.75s;
+      -o-transition: transform 0.75s;
+   }
+   .slide-img:hover{
+      transform: scale(1.15);
+      -webkit-transform: scale(1.15);
+      -moz-transform: scale(1.15);
+      -ms-transform: scale(1.15);
+      -o-transform: scale(1.15);
    }
 
    .container__text {
       z-index: 1;
       display: flex;
       align-items: flex-start;
-      top:10%;
+      top: 10%;
       padding-right: 10%;
    }
    .text-container {
@@ -963,7 +974,6 @@ footer {
       height: 45px;
       left: -5%;
       top: 2rem;
-
    }
 
    .container__btn {
@@ -973,23 +983,20 @@ footer {
       z-index: 1;
       position: relative;
       top: -30%;
-      
    }
    .btn__products {
       display: flex;
       font-size: 22px;
-      color: var(--mainColor1)!important;
-      background-color: var(--backgroundColor)!important;
+      color: var(--mainColor1) !important;
+      background-color: var(--backgroundColor) !important;
       font-weight: 700;
-      margin: 0!important;
+      margin: 0 !important;
    }
-   .btn__products:hover, .btn__products:focus {
-      color: var(--textColor3)!important;
-      background-color: var(--detailColor2)!important;
-      ;
+   .btn__products:hover,
+   .btn__products:focus {
+      color: var(--textColor3) !important;
+      background-color: var(--detailColor2) !important;
    }
-
-
 
    /* Whatsapp */
    .img_wsp {
@@ -1016,7 +1023,6 @@ footer {
       padding-top: 2rem;
    }
    .home-details-container {
-      
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -1190,12 +1196,12 @@ footer {
       border-radius: 0px 0px 15px 15px;
       width: 25%;
       max-width: 25%;
-      transition: all .5s ease;
+      transition: all 0.5s ease;
    }
 
    .card:hover {
-      -webkit-box-shadow: 0px 5px 8px 2px rgba(0,0,0,0.38); 
-      box-shadow: 0px 5px 8px 2px rgba(0,0,0,0.38);
+      -webkit-box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.38);
+      box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.38);
    }
 
    .card img {
@@ -1522,23 +1528,19 @@ footer {
    }
 }
 
-
 @media screen and (min-width: 600px) and (max-width: 1023px) {
    /* Slide */
-  
+
    .text-container {
       position: relative;
    }
    .text-container::after {
-      
       width: 110%;
       height: 24px;
-
    }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1517px) {
-
    /* Details */
 
    .home-details-allcontainer {
@@ -1550,7 +1552,6 @@ footer {
       padding-top: 2rem;
    }
    .home-details-container {
-      
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -1679,7 +1680,4 @@ footer {
    .home-details__img-col-1 > img {
       height: 60%;
    }
-
-
-
 }
