--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,16 @@
    box-sizing: border-box;
    margin: 0;
    padding: 0;
+   font-family: "Red Hat Display";
    /*overflow-x: hidden;*/
    /*outline: 1px solid #f00 !important;*/ /*HABILITAR ESTE COMANDO PARA VER DONDE ESTÁ DESBORDANDO EL CODIGO*/
 }
 
 .strongText {
    font-weight: bold;
+}
+.text-color-brown {
+   color: var(--detailColor1);
 }
 
 /* ======================================================================================================================= 
@@ -69,7 +73,6 @@
    font-size: 22px;
    font-weight: 500;
    color: var(--mainColor1) !important;
-   margin: 10px 40px !important;
    border: none;
 }
 .filterBtn:hover,
@@ -109,8 +112,8 @@ body {
 }
 
 .navbar__logo {
-   width: 246px;
-   height: 51px;
+   width: 248px;
+   height: 71px;
    margin-left: 5%;
 }
 
@@ -127,6 +130,9 @@ body {
    z-index: -1;
    text-decoration: none;
    list-style: none;
+   justify-content: center;
+   align-items: center;
+   justify-items: center;
 }
 
 .navbar__menu.active {
@@ -166,14 +172,14 @@ body {
    display: flex;
    align-items: center;
    justify-content: center;
-   padding: 0 20px;
    text-decoration: none;
-   height: 100px;
+   height: 40px;
    transition: all 0.3s ease;
 }
 
 .navbar__links:hover {
    color: var(--linkColor1);
+   border-bottom: 5px solid;
    transition: all 0.3s ease;
 }
 
@@ -251,34 +257,6 @@ body {
    width: 100px;
 }
 /* Slide */
-.container__text {
-   z-index: 1;
-   height: 100%;
-   display: flex;
-   justify-content: flex-end;
-   align-items: flex-end;
-   position: relative;
-   bottom: 17%;
-}
-.text-container {
-   font-size: 45px;
-   font-weight: bold;
-   font-family: "red Hat Display";
-   text-shadow: 10px 10px 5px rgba(0, 0, 0, 0.11);
-   z-index: 1;
-   position: relative;
-}
-
-.text-container::after {
-   content: "";
-   position: absolute;
-   background-color: var(--detailColor2);
-   width: 150%;
-   height: 17px;
-
-   top: -5rem;
-   z-index: -1;
-}
 
 .container__btn {
    display: none;
@@ -293,6 +271,7 @@ body {
 }
 /* Details */
 .container__detail__spa {
+   justify-content: space-around;
    display: flex;
    /*justify-content: center;*/
    align-items: center;
@@ -415,9 +394,17 @@ body {
    width: 100%;
 }
 
-.home-details__img-col-2 > img {
-   width: 100%;
-   /*padding: 20px;*/
+.home-details__img-col-2_img1 {
+   width: 323px;
+   height: 311px;
+   margin-top: 15px;
+   margin-left: 12px;
+}
+.home-details__img-col-2_img2 {
+   width: 210px;
+   height: 280px;
+   margin-top: 15px;
+   margin-left: 15px;
 }
 /* Products */
 
@@ -440,7 +427,9 @@ body {
 }
 
 .upper-title {
-   font-size: 1rem;
+   position: relative;
+   top: 15px;
+   font-size: 29px;
    line-height: 36.5px;
    font-weight: 500;
    color: var(--textColor2);
@@ -536,6 +525,7 @@ body {
 }
 
 .detailView-container__details {
+   width: 359px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
@@ -543,7 +533,16 @@ body {
    height: 100%;
    padding: 0 1rem;
 }
+.detailView-size p {
+   width: 450px;
+   font-size: 17px;
+   line-height: 22.49px;
+   font-weight: 500 !important;
+}
 .detailView-text {
+   width: 448px;
+   height: 282px;
+   font-weight: 400, bold;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
@@ -551,30 +550,35 @@ body {
    height: 50%;
 }
 
-.detailView-text__title {
-   text-transform: uppercase;
-   position: relative;
-   z-index: 1;
-}
-.detailView-text__title::after {
-   content: "";
-   position: absolute;
-   width: 100%;
-   height: 20px;
-   background-color: var(--detailColor2);
-   opacity: 50%;
-   left: -0.3rem;
-   top: 1rem;
-   z-index: -1;
-}
-
 .detailView-text__pretitle {
    margin: 0;
 }
 
+.container__btn__detailview {
+   font-size: 16px;
+   font-weight: 700, bold;
+}
+.btn__detailView {
+   color: var(--linkColor1) !important;
+   background-color: var(--detailColor1) !important;
+   margin: 0 !important;
+   border: none !important;
+}
+.btn__detailView:hover {
+   color: var(--detailColor1) !important;
+   background-color: var(--detailColor2) !important;
+}
+
+/* .detailView-btn {
+   text-decoration: none;
+   color: var(--linkColor1);
+   font-size: 16px;
+   font-weight: 600;
+   margin: 0;
+}
 .detailView-btnContainer {
-   width: 200px;
-   height: 58px;
+   width: 238px;
+   height: 49px;
    background-color: var(--mainColor1);
    display: flex;
    align-items: center;
@@ -589,9 +593,10 @@ body {
    text-decoration: none;
    color: var(--linkColor1);
    font-size: 16px;
-   font-weight: 600;
+   line-height: 14.88px;
+   font-weight: 700 bold;
    margin: 0;
-}
+} */
 
 /* Payment & Shipment */
 
@@ -764,7 +769,7 @@ footer {
    align-self: flex-start;
    margin: 0;
    padding: 0;
-   font-size: 16px;
+   font-size: 15px;
    line-height: 20px;
 }
 
@@ -805,9 +810,12 @@ footer {
    width: 2.2rem;
 }
 
-.footer-social:hover, .footer-social:focus {
-   filter:invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg) brightness(101%) contrast(102%);
-   -webkit-filter:invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg) brightness(101%) contrast(102%);
+.footer-social:hover,
+.footer-social:focus {
+   filter: invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg)
+      brightness(101%) contrast(102%);
+   -webkit-filter: invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg)
+      brightness(101%) contrast(102%);
 }
 
 /* ======================================================================================================================= 
@@ -816,6 +824,7 @@ footer {
 
 @media screen and (min-width: 1024px) {
    /* Body */
+
    body {
       background: rgb(255, 150, 65);
       background: var(--backgroundColor);
@@ -862,8 +871,9 @@ footer {
    }
 
    .navbar__logo {
-      width: 246px;
-      height: 51px;
+      width: 248px;
+      height: 71px;
+      margin-left: 101%;
       /*position: absolute;
       left: 250px;
       top: 13px;*/
@@ -874,6 +884,7 @@ footer {
       box-sizing: border-box;
       display: flex;
       align-items: center;
+      
    }
 
    .navbar__links {
@@ -884,9 +895,7 @@ footer {
       align-items: center;
       justify-content: center;
       padding: 0 10px;
-      text-decoration: none;
       height: 67px;
-      /*max-height: max-content;*/
       transition: all 0.3s ease;
    }
 
@@ -977,17 +986,17 @@ footer {
    }
    .btn__products {
       display: flex;
-      font-size: 26px;
+      font-size: 16px;
       color: var(--mainColor1) !important;
       background-color: var(--backgroundColor) !important;
-      font-weight: 700;
+      font-weight: bold;
       margin: 0 !important;
       border: none !important;
    }
    .btn__products:hover,
    .btn__products:focus {
-      color: var(--textColor3) !important;
-      background-color: var(--detailColor2) !important;
+      color: var(--detailColor2) !important;
+      background-color: var(--detailColor1) !important;
    }
 
    /* Whatsapp */
@@ -1015,6 +1024,7 @@ footer {
       padding-top: 2rem;
    }
    .home-details-container {
+      width: 919px;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -1113,16 +1123,18 @@ footer {
 
    .paragraph1 {
       margin-top: 2rem;
+      font-size: 17px;
    }
 
    .single-detail-img {
-      height: 519px;
+      width: 483px;
+      height: 550px;
       padding-right: 33px;
-      position: relative;
    }
 
    .home-details__img-col-2 {
-      width: 414px;
+      display: flex;
+      width: 450px;
    }
    .home-details__img-col-1 {
       width: 414px;
@@ -1134,9 +1146,22 @@ footer {
       display: block;
    }
 
-   .home-details__img-col-1 > img,
-   .home-details__img-col-2 > img {
-      width: 414px;
+   .home-details__img-col-2_img1 {
+      width: 210px;
+      height: 186px;
+      margin-top: 30px;
+      margin-right: 15px;
+   }
+   .home-details__img-col-2_img2 {
+      width: 210px;
+      height: 280px;
+      margin-top: 30px;
+      margin-left: 15px;
+   }
+
+   .detail__img__container {
+      display: flex;
+      flex-direction: column;
    }
 
    /* Products */
@@ -1154,31 +1179,36 @@ footer {
       justify-content: center;
    }
    .container-title {
+      width: 439px;
       display: flex;
       align-items: flex-start;
       flex-direction: column;
    }
    .upper-title {
-      font-size: 2rem;
-      line-height: 36.5px;
-      font-weight: 500;
+      font-size: 28px;
+      line-height: 38.37px;
+      font-weight: 400;
       color: var(--textColor2);
+      position: relative;
+      left: 2.2rem;
+      top: 10px;
    }
    .home-contact__title__products {
-      margin-top: 0.3rem;
       position: relative;
       z-index: 0;
-      font-size: 3.5rem;
+      font-size: 47px;
+      line-height: 46px;
+      left: 2.2rem;
       color: var(--textColor2);
    }
    .home-contact__title__products::after {
       content: "";
       position: absolute;
       background-color: var(--detailColor6);
-      width: 95%;
-      height: 56%;
+      width: 100%;
+      height: 66%;
       left: 0.2rem;
-      top: 2.5rem;
+      top: 1.5rem;
       z-index: -1;
    }
    .card {
@@ -1263,6 +1293,9 @@ footer {
       height: 100%;
    }
    .detailView-text {
+      width: 448px;
+      height: 282px;
+      font-weight: 400, bold;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -1275,41 +1308,27 @@ footer {
       position: relative;
       z-index: 1;
    }
-   .detailView-text__title::after {
-      content: "";
-      position: absolute;
-      width: 90%;
-      height: 30px;
-      background-color: var(--detailColor2);
-      opacity: 50%;
-      left: -0.3rem;
-      top: 1.3rem;
-      z-index: -1;
-   }
 
    .detailView-text__pretitle {
+      font-size: 23px;
       margin: 0;
+      position: relative;
+      top: 10px;
    }
 
-   .detailView-btnContainer {
-      width: 288px;
-      height: 78px;
-      background-color: var(--mainColor1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      border-radius: 50px;
-      align-self: center;
-      margin-top: 5rem;
+   .container__btn__detailview {
+      font-size: 16px;
+      font-weight: 700, bold;
    }
-
-   .detailView-btn {
-      text-decoration: none;
-      color: var(--linkColor1);
-      font-size: 22px;
-      font-weight: 600;
-      margin: 0;
+   .btn__detailView {
+      color: var(--linkColor1) !important;
+      background-color: var(--detailColor1) !important;
+      margin: 0 !important;
+      border: none !important;
+   }
+   .btn__detailView:hover {
+      color: var(--detailColor1) !important;
+      background-color: var(--detailColor2) !important;
    }
 
    /* Payment & Shipment */
@@ -1327,7 +1346,7 @@ footer {
       width: 33%;
       display: flex;
       flex-direction: row;
-      align-items: flex-start;
+      align-items: center;
       align-self: center;
       justify-content: center;
       padding: 0 2rem;
@@ -1360,12 +1379,16 @@ footer {
       font-weight: 400;
       color: var(--mainColor1);
    }
+   .bajar{
+      position: relative;
+      top: 37px;
+   }
 
    /* Contact */
 
    .home-contact {
       background-color: #484437;
-      background-image: url("https://i.ibb.co/GThRnLD/footer.png");
+      background-image: url("../images/footer/footer.png");
       object-fit: cover;
       background-size: cover;
       display: flex;
@@ -1522,13 +1545,14 @@ footer {
       width: 2.2rem;
    }
 
-   .footer-social:hover, .footer-social:focus {
-      filter:invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg) brightness(101%) contrast(102%);
-      -webkit-filter:invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg) brightness(101%) contrast(102%);
+   .footer-social:hover,
+   .footer-social:focus {
+      filter: invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg)
+         brightness(101%) contrast(102%);
+      -webkit-filter: invert(30%) sepia(13%) saturate(1188%) hue-rotate(327deg)
+         brightness(101%) contrast(102%);
+   }
 }
-}
-
-
 
 @media screen and (min-width: 1024px) and (max-width: 1517px) {
    /* Details */
