--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,13 @@
    font-weight: 500;
    color: var(--mainColor1) !important;
    border: none;
+   padding-bottom: 3px;
 }
 .filterBtn:hover,
 .filterBtn:focus {
    border-bottom: 3px solid var(--mainColor1);
    margin-bottom: 7px !important;
+   padding-bottom: 0px;
 }
 
 body {
@@ -503,6 +505,7 @@ body {
    align-items: center;
    justify-content: space-between;
    gap: 0.5rem;
+   height: 15%;
 }
 
 .otras-img a {
@@ -511,12 +514,14 @@ body {
 }
 
 .images__main-img {
+   height: 60%;
    width: 100%;
    margin-bottom: 30px;
 }
 
 .images__main-img > img {
    width: 100%;
+   height: 100%;
 }
 
 .otra-img {
@@ -525,7 +530,7 @@ body {
 }
 
 .detailView-container__details {
-   width: 359px;
+   width: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
@@ -534,13 +539,13 @@ body {
    padding: 0 1rem;
 }
 .detailView-size p {
-   width: 450px;
+   width: 100%;
    font-size: 17px;
    line-height: 22.49px;
    font-weight: 500 !important;
 }
 .detailView-text {
-   width: 448px;
+   width: 100%;
    height: 282px;
    font-weight: 400, bold;
    display: flex;
@@ -1272,7 +1277,7 @@ footer {
    }
 
    .otra-img {
-      width: 130px;
+      width: 100%;
    }
 
    .detailView-container__details {
@@ -1290,7 +1295,7 @@ footer {
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
-      height: 50%;
+      height: 70%;
    }
 
    .detailView-text__title {
@@ -1309,6 +1314,7 @@ footer {
    .container__btn__detailview {
       font-size: 16px;
       font-weight: 700, bold;
+      margin-top: 2rem;
    }
    .btn__detailView {
       color: var(--linkColor1) !important;
