--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,7 @@ body {
 .images__main-img > img {
    width: 100%;
    height: 100%;
+   object-fit: cover;
 }
 
 .otra-img {
@@ -1326,6 +1327,7 @@ footer {
 
    .images__main-img > img {
       width: 100%;
+      object-fit: cover;
    }
 
    .otra-img {
