--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@
    background-color: #fff;
    color: var(--mainColor1);
    padding: 10px 28px;
+   font-weight: bold;
    border-radius: 25px;
    border: 1px solid rgb(0, 0, 0);
 }
