--- a/css/style.css
+++ b/css/style.css
@@ -553,6 +553,7 @@ body {
 }
 
 .otra-img {
+   object-fit:cover;
    width: 100%;
    height: 100%;
 }
@@ -1332,9 +1333,8 @@ footer {
    }
 
    .otra-img {
-      object-fit:contain;
+      object-fit:cover;
       width: 100%;
-      background-color: white;
    }
 
    .detailView-container__details {
